--- a/development.ini
+++ b/development.ini
@@ -7,6 +7,7 @@
 use = egg:atromio
 
 pyramid.reload_templates = true
+pyramid.reload_all = true
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
